all kinds of css changes to allow my jquery youtube popup player to work in conjunction with the menu bar at the top. The only issue is the home icon isn't displaying on the menu bar. Also changed contact us page to look better. Various other minor changes like spacing and sizing of things.

--- a/web/resources/css/global.css
+++ b/web/resources/css/global.css
@@ -18,8 +18,30 @@ Copyright © 2016 Benjamin Sweeney. All rights reserved.
 
 html, body { 
     background: #333 url("http://codepen.io/images/classy_fabric.png"); 
-    margin:0; padding:0; height:100%;
+    margin:0; padding:0; 
     color:orange;
+}
+
+/*
+#index {
+    background-color: gray;
+
+}
+
+#moviesPage {
+    background-color: lightgray;
+    margin:0; padding:0; 
+    color:orange;
+
+    height:100%;
+    width: 100%; 
+
+}
+*/
+
+.colHeader {
+    color: orange;
+    font-size: 30px;
 }
 
 h2 {
@@ -202,3 +224,13 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
  .leftAlign {
     text-align: left;
 }
+
+
+
+
+
+
+
+
+
+
